--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+reqwest = {  version = "0.12.18", features = ["blocking"] }
 sha1 = "0.11.0-pre.5"
 urlencoding = "2.1.3"
