--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 reqwest = {  version = "0.12.18", features = ["blocking"] }
 sha1 = "0.11.0-pre.5"
 urlencoding = "2.1.3"
+rand = "0.9.1"
